# cruise_control

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: long.cfg
include/: lapcount.hh  longitudinal.hh  pid.hh
launch/: acceleration.launch  accelerationTRO.launch  autoX.launch  autoXTRO.launch  skidpad.launch  skidpadTRO.launch  trackdrive.launch  trackdriveTRO.launch
params/: dyn_accel.yaml  dyn_autox.yaml  dyn_autox_testing.yaml  dyn_feedforward.yaml  dyn_skidpad.yaml  dyn_trackdrive.yaml  dyn_trackdrive_fast.yaml  dyn_trackdrive_iters.yaml  long.yaml
src/: longitudinal.cpp  main.cpp  pid.cpp
